fixing ff/rw sprite being stuck, minor adjustments to layout, fixing ellipses issue on Samsung

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1823,11 +1823,11 @@ ul#subMenu {
     display: inline-block;
     text-overflow: ellipsis;
     margin-bottom: 10px;
-    line-height: 1.2em;
-    height: 88px;
-    width: 780px; }
+    line-height: 1.4em;
+    width: 780px;
+    /*height: 88px;*/ }
   #gridHTML .title {
-    font-weight: bold !important;
+    font-weight: bolder;
     width: 720px;
     overflow: hidden;
     display: inline-block;
